attempted to fix scrolling issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,9 @@ nav {
 
 main {
     grid-column: 2;
+    overscroll-behavior-y: contain;
+    overflow-scrolling: touch;
+    -webkit-overflow-scrolling: touch;
 }
 
 .breakdown {
