--- a/src/components/css/armor.css
+++ b/src/components/css/armor.css
@@ -15,6 +15,9 @@
     grid-gap: 20px;
 
     overflow-y: auto;
+    overscroll-behavior-y: auto;
+    overflow-scrolling: auto;
+    -webkit-overflow-scrolling: touch;
     overflow-x: hidden;
 }
 
