--- a/src/components/css/settings.css
+++ b/src/components/css/settings.css
@@ -1,8 +1,4 @@
-main {
-    overflow-y: auto;
-}
-
-h1 {
+.Settings h1 {
     color: #D0D0D0;
     margin-bottom: 20px;
 }
@@ -22,7 +18,7 @@ h1 {
     margin: 0 5px;
 }
 
-.divider {
+.Settings .divider {
     height: 1px;
     margin: 20px 0;
     background-color: #D0D0D0;
